# WildGuard

./: .gitignore  README.md  demo_app.py  pyproject.toml
TrailblazerML/: .gitignore  Dockerfile  README.md  entrypoint.sh
TrailblazerML/scripts/: dowload_rover_stl.sh
TrailblazerML/src/: README.md
TrailblazerML/src/gazebo_viz/: setup.py
TrailblazerML/src/gazebo_viz/config/: FilipRviz.rviz  mapper_params_online_async.yaml  my_controllers.yaml
TrailblazerML/src/gazebo_viz/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
TrailblazerML/src/gazebo_viz/launch/: launch_sim.launch.py
TrailblazerML/src/rover_teleop_twist_joy/: setup.py
TrailblazerML/src/trailblazer_bringup/: setup.py
TrailblazerML/src/trailblazer_bringup/launch/: bringup_controllers.launch.py  bringup_nav.launch.py  bringup_rtabmap_nav.launch.py  bringup_slam.launch.py
TrailblazerML/src/trailblazer_cloud/: README.md  package.xml  setup.cfg  setup.py
TrailblazerML/src/trailblazer_cloud/launch/: rgbd_odom.launch.py  trailblazer_rtabmap.launch.py
TrailblazerML/src/trailblazer_description/: package.xml  setup.py
TrailblazerML/src/trailblazer_description/config/: controllers.yaml
TrailblazerML/src/trailblazer_description/description/: camera.xacro  depth_camera.xacro  lidar.xacro  robot.urdf.xacro  (+3 more)
TrailblazerML/src/trailblazer_microRos/: README.md
TrailblazerML/src/trailblazer_nav2/: setup.py
TrailblazerML/src/trailblazer_rviz/: setup.py
TrailblazerML/src/trailblazerml/: setup.py
Web_Speech_remote_control/: LICENSE  README.md
Web_Speech_remote_control/api/: .gitignore  README.md  pyproject.toml
Web_Speech_remote_control/api/api/: asgi.py  settings.py  wsgi.py
Web_Speech_remote_control/api/chat/: consumers.py  urls.py  views.py
Web_Speech_remote_control/api/chat/templates/chat/: main.html
Web_Speech_remote_control/api/chroma_db/: chroma.sqlite3
Web_Speech_remote_control/api/static/css/: main.css
Web_Speech_remote_control/api/static/js/: buttons.js  main.js  share_screen.js  webSpeechApi.js
Web_Speech_remote_control/api/static/js/nlp/: README.md  index.html  nlp.js  pyproject.toml
Web_Speech_remote_control/api/static/js/nlp/jupyter/: dataPrepFull.py  jupyter.md  modelPrep.ipynb
Web_Speech_remote_control/api/static/js/nlp/nlpModules/: Modelfile  commands.json  modelPrep.py  modelRequest.js  ragContext.json  ragPipeline.py  voiceRecognition.js
Web_Speech_remote_control/api/static/js/nlp/nlpModules/chroma_db/: chroma.sqlite3
Web_Speech_remote_control/diagrams/connection_diagram/: connection_diagram.uxf
Web_Speech_remote_control/electron/: README.md  package-lock.json  package.json
Web_Speech_remote_control/electron/src/: index.html  index.js  renderer.js  script.js
Web_Speech_remote_control/microros_ws/: .gitignore  README.md
Web_Speech_remote_control/microros_ws/blink_wifi/: CMakeLists.txt  sdkconfigs
Web_Speech_remote_control/ros2_ws/: README.md
WildGuardPrototype/: WildGuardPrototype.py  api_simulator.py  cv_model.py  fire_data.json  integration_test.py  main.py  map_dashboard.py  model_prep.ipynb
(+13 files in other folders)
