[project]
name = "wildguard"
version = "0.1.0"
description = ""
authors = [
    {name = "m1chelangelo11",email = "1michalaniol1@gmail.com"}
]
readme = "README.md"
requires-python = "<=3.13"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "streamlit-folium (>=0.24.1,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
