[tool.poetry]
name = "wildguard"
version = "0.1.0"
description = ""
authors = ["piasekj <piasekj1602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.44.1"
folium = "^0.19.5"
streamlit-folium = "^0.24.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
torch = ">=1.8.0"
pillow = "^11.2.1"
gitpython = "^3.1.44"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
opencv-python = "^4.11.0.86"
scipy = ">=1.4.1"
thop = ">=0.1.1"
torchvision = ">=0.9.0"
tqdm = ">=4.66.3"
ultralytics = ">=8.2.34"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
